load("@crate_index//:defs.bzl",
     "aliases", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "tree-sitter-tags",
    srcs = glob(["**/*.rs"]),
    # aliases = aliases(),
    edition = "2018",
    proc_macro_deps = all_crate_deps(proc_macro = True),
    deps = all_crate_deps(normal = True) + ["//lib:tree-sitter"],
    visibility = [
        "//cli:__subpackages__",
    ]
)

