# exports_files(["alloc.c"])

cc_library(
    name  = "tree-sitter",
    srcs  = [
        "alloc.c",
        "get_changed_ranges.c",
        "language.c",
        "lexer.c",
        "node.c",
        "parser.c",
        "query.c",
        "stack.c",
        "subtree.c",
        "tree_cursor.c",
        "tree.c",
    ] + glob(["*.h"]),
    deps = ["//lib/include/tree_sitter:hdrs"],
    copts = [
        "-x", "c",
        # "-O3",
        # "-Wno-unused-function"

        "-Ilib/include",
        "-Ilib/src"
    ] + select({
        "@platforms//os:linux": ["-std=gnu11"],
        "//conditions:default": ["-std=c11"],
    }),
    local_defines = ["_POSIX_C_SOURCE=200112L"],
    # linkstatic=1,
    visibility = ["//visibility:public"]
)
