load("@rules_cc//cc:defs.bzl", "cc_library")
load("@bazel_skylib//lib:selects.bzl", "selects")

# exports_files(["alloc.c"])

cc_library(
    name  = "tree-sitter-runtime",
    srcs  = [
        "alloc.c",
        "get_changed_ranges.c",
        "language.c",
        "lexer.c",
        "node.c",
        "parser.c",
        "query.c",
        "stack.c",
        "subtree.c",
        "tree_cursor.c",
        "tree.c",
    ] + glob(["**/*.h"]),
    deps = ["//lib/include/tree_sitter:hdrs"],
    # includes = [
    #     "lib/include",
    #     "lib/src",
    # ],
    copts = selects.with_or({
        ("@rules_cc//cc/compiler:clang", "@rules_cc//cc/compiler:gcc", "@rules_cc//cc/compiler:mingw-gcc"): [
            "-x", "c",
            "-std=c11",
        ],
        ("@rules_cc//cc/compiler:msvc-cl", "@rules_cc//cc/compiler:clang-cl"): [
           "/std:c11", 
        ],
    }),
    local_defines = ["_POSIX_C_SOURCE=200112L"],
    # linkstatic=1,
    visibility = ["//visibility:public"]
)
