load("@rules_rust//cargo:defs.bzl", "cargo_build_script")
# load("@stylites_crates//:defs.bzl",
#      "aliases", "all_crate_deps")
load("@rules_rust//rust:defs.bzl",
     "rust_binary", "rust_library", "rust_test")

rust_binary(
    name = "tree-sitter-generator",
    srcs = ["generator/main.rs"], # glob(["**/*.rs"]),
    # aliases = aliases(),
    edition = "2018",
    # proc_macro_deps = all_crate_deps(proc_macro = True),
    deps = [ # all_crate_deps(normal = True) + [
        "//src/runtime/bindings/rust:tree-sitter",
        ":generator",

        # "@stylites_crates//:ansi_term",
        "@stylites_crates//:anyhow",
        "@stylites_crates//:clap",
        "@stylites_crates//:glob",
        "@stylites_crates//:log",

        # "//cli/config:tree-sitter-config",
        # "//cli/loader:tree-sitter-loader",
        # "//highlight:tree-sitter-highlight",
        # ":tree-sitter-cli"
    ],
    visibility = ["//visibility:public"]
)

rust_library(
    name = "generator",
    srcs = glob(["**/*.rs"],
                 # "build_tables/*rs",
                 # "prepare_grammar/*rs"],
                exclude=["main.rs", "templates/*"]),
    crate_root = "lib.rs",
    edition = "2018",
    # proc_macro_deps = all_crate_deps(proc_macro = True),
    rustc_env = {# "EMSCRIPTEN_VERSION": "3.1.37",
        ## from Cargo.toml: dependencies.tree-sitter.version
        "RUST_BINDING_VERSION": "0.20.10"
    },
    deps = [ # all_crate_deps(normal = True) + [
        "//src/runtime/bindings/rust:tree-sitter",
        "@stylites_crates//:ansi_term",
        "@stylites_crates//:anyhow",
        "@stylites_crates//:atty",
        "@stylites_crates//:clap",
        "@stylites_crates//:indexmap",
        "@stylites_crates//:lazy_static",
        "@stylites_crates//:log",
        "@stylites_crates//:regex",
        "@stylites_crates//:regex-syntax",
        "@stylites_crates//:rustc-hash",
        "@stylites_crates//:semver",
        "@stylites_crates//:smallbitvec",
        "@stylites_crates//:serde",
        "@stylites_crates//:serde_json",

        # "//cli/loader:tree-sitter-loader",
        # "//highlight:tree-sitter-highlight",
        # "//tags:tree-sitter-tags",
        # ":build"
    ],
    data = [
        "generator/dsl.js",
        "generator/prepare_grammar/unicode-categories.json",
        "generator/prepare_grammar/unicode-category-aliases.json",
        "generator/prepare_grammar/unicode-properties.json",
        "generator/prepare_grammar/unicode-property-aliases.json",
        "generator/templates/binding.cc",
        "generator/templates/binding.gyp",
        # "templates/BUILD.bazel.tplt",
        "generator/templates/cargo.toml",
        "generator/templates/build.rs",
        "generator/templates/lib.rs",
        "generator/templates/index.js",
        "generator/templates/package.json",
        # "src/playground.html",
        # "vendor/xterm-colors.json"
    ],
)

# cargo_build_script(
#     name = "build",
#     srcs = ["build.rs"],
#     data = [
#         "emscripten-version",
#         "Cargo.toml"
#     ],
#     deps = all_crate_deps(
#         normal = True,
#         build = True,
#     ),
#     crate_root = "build.rs",
# )
