load("@crate_index//:defs.bzl",
     "aliases", "all_crate_deps")
load("@rules_rust//rust:defs.bzl",
     "rust_binary", "rust_library", "rust_test")

rust_binary(
    name = "corpus",
    srcs = glob(["*.rs"]),
    edition = "2018",
    # proc_macro_deps = all_crate_deps(proc_macro = True),
    deps = [ # all_crate_deps(normal = True) + [
        "@crate_index//:ansi_term",
        "@crate_index//:anyhow",
        "@crate_index//:clap",
        "@crate_index//:ctrlc",
        "@crate_index//:difference",
        "@crate_index//:lazy_static",
        "@crate_index//:regex",
        "@crate_index//:walkdir",
        "//src/runtime/bindings/rust:tree-sitter"],
    # visibility = ["//visibility:public"]
)

