load("@crate_index//:defs.bzl",
     "aliases", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "tree-sitter-highlight",
    srcs = glob(["src/*.rs"]),
    # aliases = aliases(),
    edition = "2018",
    proc_macro_deps = all_crate_deps(proc_macro = True),
    deps = all_crate_deps(normal = True) + [
        "//src/runtime/bindings/rust:tree-sitter"],
    visibility = [
        "//visibility:public",
        # "//cli:__subpackages__",
        # "//tags:__pkg__"
    ]
)

